<resources>
    <string name="app_name">EEIA</string>

    <!-- Login Logout -->
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Repassword</string>
    <string name="btn_sign_login">Log In</string>
    <string name="btn_sign_signup">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_number">Enter 10 digit Number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_repassword">Enter the repassword</string>
    <string name="err_msg_checkpassword">Password did not match</string>
    <string name="err_msg_lengthpassword">Minimum length is 5</string>

    <!-- NaviGation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <!--<string name="nav_home">Home</string>-->
    <!--<string name="nav_getintouch">Get In Touch</string>-->
    <!--<string name="nav_addpost">Add Post</string>-->
    <!--<string name="nav_wishlist">Wish List</string>-->
    <!--<string name="nav_faq">FAQ</string>-->
    <!--<string name="nav_surprises">Surprises</string>-->
    <!--<string name="nav_about_us">About Us</string>-->

    <!--As accordance with above numbering-->
    <string name="nav_home">Engineering</string>
    <string name="nav_getintouch">Commerce</string>
    <string name="nav_addpost">Arts</string>
    <string name="nav_wishlist">Medical</string>
    <string name="nav_faq">Law</string>
    <string name="nav_surprises">Management</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <!--<string-array name="nav_item_activity_titles">-->
        <!--<item>Home</item>-->
        <!--<item>Add Post</item>-->
        <!--<item>Wish List</item>-->
        <!--<item>Get In Touch</item>-->
        <!--<item>Faq</item>-->
        <!--<item>Surprises</item>-->
    <!--</string-array>-->

    <!--As accordance with above numbering-->
    <string-array name="nav_item_activity_titles">
        <item>Engineeing</item>
        <item>Arts</item>
        <item>Medical</item>
        <item>Commerce</item>
        <item>Law</item>
        <item>Management</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Legal Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Legal Policy</string>


    <!--Card View Strings-->
    <string name="backdrop_title">ENGINEERING WORLD</string>
    <string name="backdrop_subtitle">This Field has 10 branch</string>
</resources>
