<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#209980"
        android:weightSum="1">
        <TextView
            android:text="Engineering"
            android:textSize="50dp"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="80dp"
            android:textColor="#ca5f41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />
        <ImageView
            android:id="@+id/logoicon"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/loginlogo"
            android:layout_marginLeft="140dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Explore"
            android:textSize="30dp"
            android:fontFamily="cursive"
            android:textColor="#ca5f41"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="-40dp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="320dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:hint="@string/hint_name"
                android:textSize="22dp"
                android:ems="10"
                android:id="@+id/editTextname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="320dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:hint="@string/hint_mobile"
                android:textSize="22dp"
                android:ems="10"
                android:id="@+id/editTextmobile"
                android:layout_weight="0.08" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="320dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="22dp"
                android:ems="10"
                android:id="@+id/editTextemail" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="320dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="22dp"
                android:ems="10"
                android:id="@+id/editTextpassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="320dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:hint="@string/hint_repassword"
                android:textSize="22dp"
                android:ems="10"
                android:id="@+id/editTextrepassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="Sign Up"
            android:textColor="#111111"
            android:textStyle="bold"
            android:background="#309f42"
            android:textSize="20dp"
            android:layout_width="320dp"
            android:layout_marginLeft="23dp"
            android:padding="10dp"
            android:layout_marginTop="18dp"
            android:layout_height="50dp"
            android:id="@+id/finalsignupbutton"/>

        <TextView
            android:text="Already a member? Sign In"
            android:textColor="#111111"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textviewaccountlogin" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:visibility="invisible"
            android:backgroundTint="#f7f7fa"
            android:indeterminateTint="#ca5f41"
            android:layout_marginTop="15dp"/>


    </LinearLayout>
</ScrollView>